# tracer3

./: .gitattributes  .gitignore  README.md
manifests/: EXCLUDED_ARCH_ARTIFACTS.md  SHA256SUMS  apt-manual.txt  baseline.env  can1.txt  can2.txt  dpkg-packages.tsv  ip-addresses.txt  lsusb.txt  network-connections.txt  serial-devices.txt  source-upstreams.tsv  system-services.txt
robot/dds/: fastdds_select5G.xml
robot/legacy_helpers/: start_tracer3_lidar.sh  start_tracer3_scan.sh  tracer3_points_relay.py
robot/startup/: start_system.sh  start_tracer3_lidar.sh
scripts/: build_workspaces.sh  install_dependencies.sh  verify_runtime.sh
system/: iccp-agent.yaml.example
system/chrony/: chrony.conf
system/iccp-monitor/: iccp_ros_monitor.py  setup.bash
system/systemd/: iccp-agent.service  iccp-ros-monitor.service
system/systemd/iccp-agent.service.d/: 20-resource-monitor.conf
system/systemd/iccp-ros-monitor.service.d/: 10-robot-namespace.conf
system/udev/: 99-tracer-serial.rules
workspaces/5G_slam_edge/src/ekf_localization/: package.xml  setup.cfg  setup.py
workspaces/5G_slam_edge/src/ekf_localization/config/: tracer1_ekf.yaml  tracer2_ekf.yaml  tracer3_ekf.yaml
workspaces/5G_slam_edge/src/ekf_localization/ekf_localization/: goto_pose_rigid15.py  measure-delay.py  pd_straight_controler.py  pose_monitor.py  trajectory_plotter.py  velocity_acceleration_monitor.py
workspaces/5G_slam_edge/src/ekf_localization/launch/: ekf-time-compensation.launch.py  ekf_localization.launch.py  ekf_tracer1.launch.py  ekf_tracer2.launch.py  ekf_tracer3.launch.py  monitor.launch.py  multi_ekf.launch.py  straight_with_ekf.launch.py
workspaces/5G_slam_edge/src/ekf_localization/resource/: ekf_localization
workspaces/5G_slam_edge/src/hipnuc_imu/config/: hipnuc_config.yaml
workspaces/5G_slam_edge/src/hipnuc_imu/launch/: imu_spec_msg.launch.py
workspaces/5G_slam_edge/src/hipnuc_imu/src/: serial_port.cpp  sub_spec.cpp
workspaces/5G_slam_edge/src/rslidar_sdk/src/rs_driver/cmake/: rs_driverConfig.cmake
workspaces/5G_slam_edge/src/tracer_ros2/tracer_base/: CMakeLists.txt
workspaces/5G_slam_edge/src/tracer_ros2/tracer_base/launch/: tracer_base.launch.py
workspaces/5G_slam_edge/src/tracer_ros2/tracer_base/src/: tracer_base_ros.cpp
workspaces/ros_huatai3_pos_spe/src/base_interfaces_demo/: CMakeLists.txt  package.xml
workspaces/ros_huatai3_pos_spe/src/base_interfaces_demo/msg/: MotorCommand.msg  MotorStatus.msg
workspaces/ros_huatai3_pos_spe/src/force_sensor_pkg/: CMakeLists.txt  package.xml
workspaces/ros_huatai3_pos_spe/src/force_sensor_pkg/include/force_sensor_pkg/: force_sensor_reader.hpp
workspaces/ros_huatai3_pos_spe/src/force_sensor_pkg/src/: force_sensor_reader.cpp
workspaces/ros_huatai3_pos_spe/src/motor_httx_aut_pos/: CMakeLists.txt  package.xml
workspaces/ros_huatai3_pos_spe/src/motor_httx_aut_pos/src/: MotorController.cpp  listener_motor.cpp  talker_aut_pos.cpp
workspaces/ros_huatai3_pos_spe/src/motor_httx_aut_spe/: CMakeLists.txt  package.xml
workspaces/ros_huatai3_pos_spe/src/motor_httx_aut_spe/include/motor_httx_aut_spe/: MotorController.h
workspaces/ros_huatai3_pos_spe/src/motor_httx_aut_spe/src/: MotorController.cpp  listener_motor.cpp  talker_aut_spe.cpp
workspaces/ros_huatai3_pos_spe/src/motor_httx_pos_spe/: CMakeLists.txt  package.xml
workspaces/ros_huatai3_pos_spe/src/motor_httx_pos_spe/include/motor_httx_pos_spe/: MotorController.h
workspaces/ros_huatai3_pos_spe/src/motor_httx_pos_spe/src/: MotorController.cpp  listener_motor.cpp  position_speed.cpp  talker.cpp
workspaces/rslidar_slam/src/config/: nav2_params.yaml  tracer3_slam.yaml
workspaces/rslidar_slam/src/m-explore-ros2/explore/config/: params.yaml  params_costmap.yaml
workspaces/rslidar_slam/src/rslidar_sdk/config/: tracer3.yaml  tracer3_slam.yaml
workspaces/rslidar_slam/src/rslidar_sdk/doc/.obsidian/: workspace.json
workspaces/rslidar_slam/src/rslidar_sdk/doc/howto/.obsidian/: workspace.json
workspaces/rslidar_slam/src/rslidar_sdk/launch/: laserscan_to_pointcloud.py  rslidar_2dscan.launch.py  rslidar_slam_2dscan.launch.py  start.py
workspaces/rslidar_slam/src/rslidar_sdk/src/rs_driver/cmake/: rs_driverConfig.cmake
workspaces/rslidar_slam/src/slam_gmapping/slam_gmapping/launch/: slam_gmapping.launch.py
workspaces/rslidar_slam/src/slam_gmapping/slam_gmapping/src/: slam_gmapping.cpp
workspaces/rslidar_slam/src/tracer3_lidar_launch/launch/: tracer3_lidar.launch.py
